// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spySnapshotSerializer keeps other objects 1`] = `
Array [
  "str",
  5,
  Array [
    1,
    2,
    3,
  ],
  Array [
    Object {
      "a": 1,
    },
  ],
]
`;

exports[`spySnapshotSerializer list of logs 1`] = `
Array [
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
]
`;

exports[`spySnapshotSerializer naked log 1`] = `
EffectsLog [
  function1(
    1,
    2,
    3,
  ),
  function2.apply(
    Object {
      "a": 1,
    },
    [
      1,
      2,
      3,
    ]
  ),
  object1.property1,
  object2.property2 =
    Array [
      1,
      2,
      3,
    ],
]
`;

exports[`spySnapshotSerializer object of logs 1`] = `
Object {
  "a": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
  "b": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
  "c": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    object1.property1,
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
  ],
}
`;
